update aboutme and fixed broken html/css

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header">
+<header class="site-header" style="z_index:1000">
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
