--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -1,4 +1,4 @@
-{% assign info = site.pages | where: "path", "sidebar.md" | first %}
+{% assign info = site.pages | where: "path", "about_me.md" | first %}
 <span id="sidebar">
     <h1>{{ info.title }}</h1>
     <div class="content">{{ info.content | markdownify }}</div>
