--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
   {%- include head.html -%}
-
   <body>
-
     {%- include header.html -%}
 
-    <div class="main-content">
-    <aside class="sidebar" >
-        {%- include sidebar.html -%}
-    </aside>
 
-    <main class="page-content" aria-label="Content">
+    <div class="main-content" id="main-content">
+        <div class="page_peripherals">
+            <aside class="sidebar">
+                {%- include about_me.html -%}
+            </aside>
+            <aside class="sidebar">
+                {%- include toc.html -%}
+            </aside>
+        </div>
 
-        <div class="wrapper centerer"style="margin-left:0;margin-right:0">
-        {{ content }}
+        <div class="page_middle">
+            {{ content }}
+        </div>
 
-      </div>
-    </main>
-
-  </div>
-
-<!--{%- include footer.html -%}-->
+    </div>
+    <!--{%- include footer.html -%}-->
   </body>
 </html>
