--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -35,11 +35,19 @@
 /////////////////////////////////////////////
 
 .main-content {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: stretch;
-    display: flex;
     position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+.page_peripherals {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    align-items: stretch;
 }
 
 .sidebar {
@@ -47,25 +55,49 @@
     flex-grow: 0;
     flex-shrink: 1;
     background-color: transparent;
-    min-width: 25%;
-    max-width: 25%;
+    width: 30rem;
     display: flex;
     overflow-y: hidden;
     box-sizing: border-box;
-    padding: 3em;
+    padding: 2rem;
 }
-.centerer {
+
+.page_middle {
+    width: 50rem;
+    max-width: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+    padding: 2rem;
     position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0);
 }
-@media only screen and (max-width: 1000px) {
-    .sidebar {
+
+// deletes abot me if the screen is small enough
+
+@media (max-width: 110em) {
+    .page_peripherals {
         display: none;
+    }
+    #toc-post {
+        display: unset;
+    }
+    #about-me-home {
+        display: unset;
     }
 }
 
-#sidebar > h1 {
+sidebar > h1 {
     font-family: "Grenze", sans-serif;
     font-size: 2em;
+}
+
+// ####
+.custom_toc > h2 {
+    font-family: "Grenze", sans-serif;
+    line-height: 0.5;
+}
+
+tbody {
+    width: 100%;
+    display: table;
+    overflow-x: hidden;
 }
