removed test data

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,10 @@ layout: base
                     {{ post.title | escape }}
                 </a>
             </h3>
-            {%- if site.show_excerpts -%} {{ post.excerpt }} {%- endif -%}
+            {%- if post.subtitle -%}
+            <p>{{ post.subtitle }}</p>
+            {%- endif -%} {%- if site.show_excerpts -%} {{ post.excerpt }} {%-
+            endif -%}
         </li>
         {%- endfor -%}
     </ul>
