--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,15 @@
 <header class="site-header" style="z_index:1000">
 
-  <div class="wrapper">
+  <div class="custom-wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-
+    <div style="height: 100%">
+        <img src="/eclipse-waxing.gif" style="height:3rem; object-fit:cover; overflow:visible;opacity:0.5">
+    </div>
     {%- if titles_size > 0 -%}
+    <!--
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
@@ -16,16 +19,16 @@
             </svg>
           </span>
         </label>
-
-        <div class="trigger">
+-->
+        <div > <!-- <div class="trigger"> -->
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            <a class="page-link" href="{{ my_page.url | relative_url }}" style="color: #a6a6a6;"->{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
         </div>
-      </nav>
+      <!--</nav> -->
     {%- endif -%}
   </div>
 </header>
